# idle

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
src/: actions.rs  app.rs  hook.rs  lib.rs  main.rs
src/components/: chart.rs  dev_panel.rs  game_view.rs  log_panel.rs  mod.rs  state.rs  upgrade_config.rs
src/game/: actions.rs  mod.rs  state.rs
src/hooks/: auto_increment.rs  auto_save.rs  game_state.rs  mod.rs
src/predefined_states/: loader.rs  state1.json
src/predifined_states/: mod.rs  state1.json  state2.json
src/storage/: mod.rs
src/upgrades/: mod.rs  upgrades.json
src/utils/: chart.rs  file.rs
workflows/: deploy.yml
