[package]
name = "idle"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-storage = "0.3.0" # Add this line
gloo-timers = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
plotters = "0.3"
plotters-canvas = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Window",
] }
gloo-utils = "0.2"

[package.metadata]
base-url = "/idle"
